# protestify

./: .gitignore  CLAUDE.md  LICENSE  README.md  latest.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: clone_detector.rs  cucumber_runner.rs  e2e_locator.rs  features_reader.rs  file_reader.rs  lib.rs  main.rs  organizations_reader.rs  steps_reader.rs
src/lib/: utils.ts
src/lib/model/: feature.ts  index.ts  organization.ts  owner.ts  rusty.ts  scenario.ts  step.ts  team.ts
src/lib/store/: command-preview.svelte.ts  dashboard.svelte.ts  index.ts  is-update-available.ts  search-term.ts  settings.ts  toasts.ts
src/lib/ui/: Breadcrumbs.svelte  BreadcrumbsItem.svelte  CheckForUpdatesButton.svelte  CommandPreview.svelte  DataTable.svelte  FileContents.svelte  Icon.svelte  OrganizationTargets.svelte  SettingsTabs.svelte  Sidebar.svelte  StatCard.svelte  TestRunner.svelte  ThemeToggle.svelte  Toast.svelte  Toasts.svelte  TooltipOnParent.svelte
src/lib/ui/form/: Label.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/dashboard/: +page.svelte
src/routes/docs/: +page.svelte
src/routes/feature/[id]/: +page.svelte  +page.ts
src/routes/features/: +page.svelte  +page.ts
src/routes/graphs/: +page.svelte
src/routes/organization/[id]/: +page.svelte  +page.ts
src/routes/organizations/: +page.svelte  +page.ts
src/routes/owner/[name]/: +page.svelte  +page.ts
src/routes/scenario/[id]/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte  +page.ts
src/routes/steps/: +page.svelte  +page.ts
src/routes/team/[name]/: +page.svelte  +page.ts
