[package]
name = "protestify"
version = "0.0.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "protestify_lib"
crate-type = ["lib", "cdylib", "staticlib"]


[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
dirs = "6"
lazy_static = "1.5"
phf = { version = "0.13", features = ["macros"] }
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tauri = { version = "2.5", features = ["protocol-asset"] }
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-http = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-os = "2.2"
tauri-plugin-process = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-window-state = "2.2"
tauri-plugin-store = "2.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-updater = "2.2"
